--- a/GdsComponents/FloodOnlineReportingTool.GdsComponents.csproj
+++ b/GdsComponents/FloodOnlineReportingTool.GdsComponents.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
 	<PropertyGroup>
 		<TargetFramework>net9.0</TargetFramework>
@@ -11,6 +11,7 @@
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageId>DorsetCouncil.FloodOnlineReportingTool.GdsComponents</PackageId>
 		<RepositoryUrl>https://github.com/Dorset-Council-UK/FloodOnlineReportingTool.GdsComponents</RepositoryUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -21,4 +22,8 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.6" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="..\README.md" Pack="true" PackagePath="\" />
+	</ItemGroup>
+	
 </Project>
