Renamed repo to GdsBlazorComponents

--- a/GdsBlazorComponents/GdsBlazorComponents.csproj
+++ b/GdsBlazorComponents/GdsBlazorComponents.csproj
@@ -9,8 +9,8 @@
 		<Company>Dorset Council</Company>
 		<Description>Blazor components styled to match GOV.UK Design System.</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
-		<PackageId>DorsetCouncil.FloodOnlineReportingTool.GdsComponents</PackageId>
-		<RepositoryUrl>https://github.com/Dorset-Council-UK/FloodOnlineReportingTool.GdsComponents</RepositoryUrl>
+		<PackageId>DorsetCouncil.GdsBlazorComponents</PackageId>
+		<RepositoryUrl>https://github.com/Dorset-Council-UK/GdsBlazorComponents</RepositoryUrl>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
