--- a/GdsBlazorComponents/package.json
+++ b/GdsBlazorComponents/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "flood-online-reporting-tool-gds-components",
+  "name": "gds-blazor-components",
   "version": "1.0.0",
   "description": "Blazor components styled to match GOV.UK Design System.",
-  "repository": "https://github.com/Dorset-Council-UK/FloodOnlineReportingTool.GdsComponents",
+  "repository": "https://github.com/Dorset-Council-UK/GdsBlazorComponents",
   "license": "MIT",
   "main": "index.js",
   "scripts": {
