--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,17 @@ jobs:
         with:
           dotnet-version: '9.0.x'
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+
+      - name: Install npm dependencies
+        run: npm ci
+        working-directory: ./GdsBlazorComponents
+
+      - name: Build npm project
+        run: npm run build
+        working-directory: ./GdsBlazorComponents
+        
       - name: Restore dependencies
         run: dotnet restore
         working-directory: ./
