--- a/GdsBlazorComponents/GdsBlazorComponents.csproj
+++ b/GdsBlazorComponents/GdsBlazorComponents.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net9.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<Version>1.0.0</Version>
+		<Version>1.0.1-alpha</Version>
 		<Authors>Dorset Council</Authors>
 		<Company>Dorset Council</Company>
 		<Description>Blazor components styled to match GOV.UK Design System.</Description>
@@ -12,6 +12,7 @@
 		<PackageId>Dorset-Council-UK.GdsBlazorComponents</PackageId>
 		<RepositoryUrl>https://github.com/Dorset-Council-UK/GdsBlazorComponents</RepositoryUrl>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<EnableDefaultContentItems>true</EnableDefaultContentItems>
 	</PropertyGroup>
 
 	<ItemGroup>
