--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Pack
+name: Build and Publish
 
 on:
   push:
@@ -7,39 +7,49 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-publish:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Install .NET
-        uses: actions/setup-dotnet@v4
+      - uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '9.0.x'
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
 
-      - name: Install npm dependencies
-        run: npm ci
+      - run: npm ci
         working-directory: ./GdsBlazorComponents
 
-      - name: Build npm project
-        run: npm run build
+      - run: npm run build
         working-directory: ./GdsBlazorComponents
-        
-      - name: Restore dependencies
-        run: dotnet restore
-        working-directory: ./
 
-      - name: Build
-        run: dotnet build --configuration Release --no-restore
-        working-directory: ./
+      - run: dotnet restore
 
-      - name: Package NuGet
-        run: dotnet pack --configuration Release --no-build
+      - run: dotnet build --configuration Release --no-restore
 
-      - name: Publish NuGet
-        run: dotnet nuget push **/*.nupkg -s https://api.nuget.org/v3/index.json -k ${{secrets.NUGET_API_KEY}} --skip-duplicate --no-symbols
+      - run: dotnet pack --configuration Release --no-build
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: nuget-package
+          path: '**/*.nupkg'
+
+  publish:
+    needs: build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '9.0.x'
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: nuget-package
+
+      - run: dotnet nuget push **/*.nupkg -s https://api.nuget.org/v3/index.json -k ${{secrets.NUGET_API_KEY}} --skip-duplicate --no-symbols
