--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,8 @@ name: Build and Publish
 
 on:
   push:
-    branches: [ main ]
+    tags:
+      - v*
   pull_request:
     branches: [ main ]
 
@@ -38,7 +39,7 @@ jobs:
 
   publish:
     needs: build
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
 
     steps:
