--- a/GdsBlazorComponents/package.json
+++ b/GdsBlazorComponents/package.json
@@ -10,24 +10,27 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --node-env production --config webpack.prod.js",
     "build:dev": "webpack --node-env development --config webpack.dev.js",
-    "watch": "webpack --config webpack.dev.js --watch"
+    "watch": "webpack --config webpack.dev.js --watch",
+    "audit": "npm audit",
+    "audit fix": "npm audit fix",
+    "outdated": "npm outdated"
   },
   "dependencies": {
-    "@types/govuk-frontend": "5.9.0",
+    "@types/govuk-frontend": "^5.11.0",
     "govuk-frontend": "^5.11.0"
   },
   "devDependencies": {
-    "@types/node": "^20.11.16",
-    "copy-webpack-plugin": "^12.0.2",
-    "css-loader": "^6.10.0",
+    "@types/node": "^24.10.1",
+    "copy-webpack-plugin": "^13.0.1",
+    "css-loader": "^7.1.2",
     "mini-css-extract-plugin": "^2.8.0",
     "sass": "^1.70.0",
-    "sass-loader": "^14.1.0",
+    "sass-loader": "^16.0.6",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.90.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-merge": "^5.10.0"
+    "webpack-cli": "^6.0.1",
+    "webpack-merge": "^6.0.1"
   },
   "-vs-binding": {
     "ProjectOpened": [
